--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,24 @@ body
     margin: 0;
     padding: 0;
 }
+
+#cabecera
+{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container
 {
     width: 70%;
@@ -15,6 +33,7 @@ body
     border: 1px solid #DDD;
     margin: 0 auto;
 }
+
 #container h1
 {
     font-size: 20px;
